--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Beer Blaster 2.0</title>
   <style>
-    body { margin: 0; background: black; overflow: hidden; font-family: monospace; }
+    body { margin: 0; background: black; overflow: hidden; font-family: monospace; touch-action: none; }
     canvas { display: block; margin: auto; background: #000; image-rendering: pixelated; }
     #score {
       position: absolute;
@@ -40,6 +40,30 @@
       padding: 10px;
       font-size: 14px;
     }
+    #mobile-controls {
+      display: none;
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 10;
+    }
+    .control-btn {
+      width: 60px;
+      height: 60px;
+      margin: 0 10px;
+      border-radius: 8px;
+      font-size: 24px;
+      background: rgba(255,255,255,0.2);
+      color: white;
+      border: 2px solid lime;
+    }
+
+    @media (pointer: coarse) {
+      #mobile-controls {
+        display: flex;
+      }
+    }
   </style>
 </head>
 <body>
@@ -51,6 +75,14 @@
     <button onclick="startGame()">Начать игру</button>
   </div>
   <canvas id="game" width="480" height="640"></canvas>
+
+  <!-- Мобильные кнопки -->
+  <div id="mobile-controls">
+    <button class="control-btn" id="leftBtn">⏪</button>
+    <button class="control-btn" id="fireBtn">🔫</button>
+    <button class="control-btn" id="rightBtn">⏩</button>
+  </div>
+
   <script src="game.js"></script>
 </body>
 </html>
