--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
   <div id="score">Счёт: 0 | Пропущено: 0 / 5</div>
   <div id="leaderboard">Топ 3:<br><div id="topScores"></div></div>
   <div id="startScreen">
-    <h1>🍺 Beer Blaster</h1>
-    <p id="startText">Очисти посёлок от бутылок и победи кегу!</p>
+    <h1>🍺 Ачер vs Хадыжи</h1>
+    <p id="startText">Очисти посёлок от бутылок и победи Главного врага!</p>
     <button onclick="startGame()">Начать игру</button>
   </div>
   <canvas id="game"></canvas>
