--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <div id="score">Счёт: 0 | Пропущено: 0 / 5</div>
 
   <div id="startScreen">
-    <h1>🍺 Beer Blaster</h1>
+    <h1>🍺 Ачер против Хадыжей</h1>
     <p id="startText">Очисти посёлок от бутылок и победи кегу!</p>
     <button onclick="startGame()">Начать игру</button>
     <div id="leaderboard">
