--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
   <div id="score">Счёт: 0 | Пропущено: 0 / 5</div>
 
   <div id="startScreen">
-    <h1>🍺 Beer Blaster</h1>
-    <p id="startText">Очисти посёлок от бутылок и победи кегу!</p>
+    <h1>🍺 Ачер vs Хадыжи</h1>
+    <p id="startText">Очисти посёлок от бутылок и победи Тимура!</p>
     <button onclick="startGame()">Начать игру</button>
     <div id="leaderboard">
       <strong>🏆 Топ 10 игроков:</strong><br>
