--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
       text-align: center;
       padding: 20px;
     }
+    #startScreen h1 {
+      color: white;
+      background: rgba(0, 0, 0, 0.5); /* Полупрозрачный фон */
+      padding: 8px 15px; /* Отступы */
+      border-radius: 4px; /* Скругленные углы */
+      font-size: 2.5em; /* Увеличенный размер */
+      margin: 10px 0;
+    }
+    #startScreen p {
+      color: white;
+      background: rgba(0, 0, 0, 0.5); /* Полупрозрачный фон */
+      padding: 6px 12px; /* Отступы */
+      border-radius: 4px; /* Скругленные углы */
+      font-size: 1.2em;
+      margin: 10px 0;
+    }
     #leaderboard {
       margin-top: 20px;
       background: rgba(0, 0, 0, 0.5);
