--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     canvas {
       display: block;
       position: absolute;
+      top: 0;
+      left: 0;
       image-rendering: pixelated;
     }
     #score {
@@ -82,8 +84,8 @@
       touch-action: manipulation;
     }
     .control-button {
-      position: absolute;
-      bottom: 10px; /* Временное значение, будет переопределено в JS */
+      position: fixed;
+      bottom: 10px;
       width: 45%;
       height: 80px;
       z-index: 30;
@@ -99,11 +101,11 @@
       opacity: 0.8;
     }
     #leftButton {
-      left: 0;
+      left: 10px;
       background-image: url('leftArrow.png');
     }
     #rightButton {
-      right: 0;
+      right: 10px;
       background-image: url('rightArrow.png');
     }
   </style>
@@ -129,4 +131,5 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="game.js"></script>
   <audio id="menuMusic" src="menu.mp3" autoplay loop></audio>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9325fde7cae66737',t:'MTc0NDk5ODQ5My4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script>
 </body>
