--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
   <div id="score">Счёт: 0 | Пропущено: 0 / 5</div>
 
   <div id="startScreen">
-    <h1>🍺 Ачер vs Куличи</h1>
-    <p id="startText">Помешай Тимуру сожрать все Куличи!</p>
+    <h1>🍺 Ачер vs Хадыжи</h1>
+    <p id="startText">Помоги Ачеру выпить все Хадыжи!</p>
     <button onclick="startGame()">Начать игру</button>
     <div id="leaderboard">
       <strong>🏆 Топ 10 игроков:</strong><br>
